<resources>
    <string name="app_name">fishme</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="to_get_started_please_enter_your_phone_number">To Get started please enter your phone number</string>
    <string name="make_sure_the_number_is_correct_cause_we_ll_send_you_a_verification_code">make sure the number is correct cause we\'ll send you a verification code</string>
    <string name="shop_directly_from_fisherman_and_have_it_delivered_to_your_doorstep">Shop directly from fisherman and have it delivered to your doorstep</string>
    <string name="welcome_to_fish_me">Welcome to Fish.Me</string>
    <string name="sign_up">SIGN UP</string>
    <string name="skip">SKIP</string>
    <string name="company_logo">company logo</string>
    <string name="next">NEXT</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="market">Market</string>
    <string name="orders">Orders</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">home</string>
    <string name="cart">cart1</string>
    <string name="cart1">cart1</string>
    <string name="welcome">welcome</string>
    <string name="main_activity">main_activity</string>
    <string name="_973">+973</string>
    <string name="bcc">bcc</string>
</resources>
