<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="k.nabeel.fishme.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">


    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="k.nabeel.fishme.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_shopping_cart"
        android:name="k.nabeel.fishme.ui.shopping_cart.ShoppingCartFragment"
        android:label="@+id/shopping_cart"
        tools:layout="@layout/shopping_cart_fragment" />
    <fragment
        android:id="@+id/nav_market"
        android:name="k.nabeel.fishme.ui.market.MarketFragment"
        android:label="@+id/market"
        tools:layout="@layout/market_fragment" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="k.nabeel.fishme.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/orders_fragment"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="k.nabeel.fishme.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="k.nabeel.fishme.ui.contact_us.ContactUsFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/contact_us_fragment" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="k.nabeel.fishme.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>